# FinanceProject

./: .gitignore  Dockerfile  PLAN.md  README.md  app_requirements.txt  pyproject_example.toml
app/: Dockerfile  manage.py  pyproject.toml
app/blog/: models.py
app/blog/migrations/: 0001_initial.py  0002_blogpage.py  0003_blogpagegalleryimage.py  0004_blogpagetag_blogpage_tags.py  0005_blogtagindexpage.py
app/blog/templates/blog/: blog_index_page.html  blog_page.html
app/financeapp/: wsgi.py
app/financeapp/settings/: base.py  dev.py
app/financeapp/templates/: base.html
app/home/migrations/: 0003_homepage_body.py
financeapp/: requirements.txt
financeapp/financeapp/: asgi.py  settings.py  urls.py  wsgi.py
financeapp/main/templates/main/: about.html  base.html  index.html
financeapp/posts/: models.py  urls.py  views.py
financeapp/posts/migrations/: 0001_initial.py
financeapp/templates/: base.html
financeapp/templates/pages/: about.html  index.html
financeapp/templates/partials/: _footer.html  _navbar.html  _topbar.html
financeapp/templates/posts/: post.html  posts.html  search.html
financeapp/users/: models.py
